--- a/index.html
+++ b/index.html
@@ -686,9 +686,9 @@ font-size: 1.5vh;
     oninput="this.style.height = ''; this.style.height = this.scrollHeight + 'px';"
   ></textarea>
   <div style="display: flex; flex-direction: row; width: 100%;">
-  <button class="toolbar-column-btns" id="button1" style="display: block; width: 30%;">Picture</button>
-  <button class="toolbar-column-btns" id="button2" style="display: block; width: 30%; margin-left: 5%;">Username</button>
-  <button class="toolbar-column-btns" id="button_for_click_url" style="display: block; width: 30%; margin-left: 5%;">CLICK2LINK</button>
+  <button class="toolbar-column-btns" id="button1" style="display: block; width: 24vw;">Picture</button>
+  <button class="toolbar-column-btns" id="button2" style="display: block; width: 24vw; margin-left: 1vw;">Username</button>
+  <button class="toolbar-column-btns" id="button_for_click_url" style="display: block; width: 24vw; margin-left: 1vw;">CLICK2LINK</button>
 </div>
   <textarea 
   type="text" 
