--- a/index.html
+++ b/index.html
@@ -1520,11 +1520,11 @@ oninput="this.style.height = ''; this.style.height = this.scrollHeight + 'px';"
       font-size: 1.5vh;
       display: none;
       margin-left: 0.3vh;
-    ">Controls</button>
+    ">CONTROLS</button>
 
     <button id="toggle-toolbar-btn" style="
       position: fixed;
-      top: 15.5vh;
+      top: 20vh;
       left: 0;
       z-index: 1006;
       background-color: #007bff;
@@ -1536,7 +1536,7 @@ oninput="this.style.height = ''; this.style.height = this.scrollHeight + 'px';"
       font-size: 1.5vh;
       display: none;
       margin-left: 0.3vh;
-    ">Toolbar</button>
+    ">TOOLBAR</button>
 
 <div style="display: flex; position: fixed; top: 6.5vh; left: 0; z-index: 1006;">
   <button id="main-toggle-btn" style="
@@ -1548,7 +1548,7 @@ oninput="this.style.height = ''; this.style.height = this.scrollHeight + 'px';"
     cursor: pointer;
     font-size: 1.5vh;
     margin-left: 0.3vh;
-  ">Options</button>
+  ">OPTIONS</button>
 
   <button id="topic-chat-btn" style="
     background-color: rgb(0, 123, 255);
@@ -1559,7 +1559,7 @@ oninput="this.style.height = ''; this.style.height = this.scrollHeight + 'px';"
     cursor: pointer;
     font-size: 1.5vh;
     margin-left: 1vw; /* Add some space between buttons */
-  ">Topic Chat</button>
+  ">TOPIC CHAT</button>
 </div>
 
 
@@ -2118,22 +2118,6 @@ oninput="this.style.height = ''; this.style.height = this.scrollHeight + 'px';"
 
     <button id="toggle-rotation-controls-btn" style="
       position: fixed;
-      top: 20vh;
-      left: 0;
-      z-index: 1006;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      padding: 0.8vh 1vw;
-      border-radius: 0.8vh;
-      cursor: pointer;
-      font-size: 1.5vh;
-      display: none; /* Initially hidden */
-      margin-left: 0.3vh;
-    ">POV</button>
-
-    <button id="toggle-visibility-controls-btn" style="
-      position: fixed;
       top: 11vh;
       left: 0;
       z-index: 1006;
@@ -2146,7 +2130,23 @@ oninput="this.style.height = ''; this.style.height = this.scrollHeight + 'px';"
       font-size: 1.5vh;
       display: none; /* Initially hidden */
       margin-left: 0.3vh;
-    ">Visibility</button>
+    ">YOUR FOV</button>
+
+    <button id="toggle-visibility-controls-btn" style="
+      position: fixed;
+      top: 15.5vh;
+      left: 0;
+      z-index: 1006;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 0.8vh 1vw;
+      border-radius: 0.8vh;
+      cursor: pointer;
+      font-size: 1.5vh;
+      display: none; /* Initially hidden */
+      margin-left: 0.3vh;
+    ">VISIBILITY</button>
 
 
 <div class="popup-welcome-msg" id="welcome-msg" style="display: none;">
