--- a/index.html
+++ b/index.html
@@ -650,8 +650,6 @@ data-script-id="dracoBase64"
 position: fixed;
 right: 0;
 top: 0;
-width: 30vw; /* Match the width of the coordinates display */
-height: 3vw; /* Match the height of the coordinates display */
 z-index: 1001; /* Ensure the button is above the input field */
 background-color: transparent; /* Make the button invisible */
 border: none;
@@ -2715,7 +2713,7 @@ const payerInfo = message.payer ? `${message.payer}` : 'Anonymous';
         allMessages += `<div style="display: flex; align-items: center; margin-top: 0.1em;">
   <img src="${validPayerImage}" alt="Profile photo" 
   style="width: 2em; height: 2em; margin-right: 0.5em; border-radius: 1em;"
-  onclick="loadTOPIC4PIC('${message.payer}').then(result => console.log(result)).catch(err => console.error('Error:', err));">
+  onclick="loadTOPIC4PIC('${message.payer}');">
                           <div style="display: flex; flex-direction: column; justify-content: center;">
                             <div>${displayHeader}</div>
                             <span style="font-size: 0.8em; color: gray;">${timestamp}</span>
@@ -2862,7 +2860,7 @@ const payerInfo = message.payer ? `${message.payer}` : 'Anonymous';
         allMessages += `<div style="display: flex; align-items: center; margin-top: 0.1em;">
   <img src="${validPayerImage}" alt="Profile photo" 
   style="width: 2em; height: 2em; margin-right: 0.5em; border-radius: 1em;"
-  onclick="loadTOPIC4PIC('${message.payer}').then(result => console.log(result)).catch(err => console.error('Error:', err));">
+  onclick="loadTOPIC4PIC('${message.payer}');">
                           <div style="display: flex; flex-direction: column; justify-content: center;">
                             <div>${displayHeader}</div>
                             <span style="font-size: 0.8em; color: gray;">${timestamp}</span>
@@ -2979,7 +2977,7 @@ const payerInfo = message.payer ? `${message.payer}` : 'Anonymous';
         allMessages += `<div style="display: flex; align-items: center; margin-top: 0.1em;">
   <img src="${validPayerImage}" alt="Profile photo" 
   style="width: 2em; height: 2em; margin-right: 0.5em; border-radius: 1em;"
-  onclick="loadTOPIC4PIC('${message.payer}').then(result => console.log(result)).catch(err => console.error('Error:', err));">
+  onclick="loadTOPIC4PIC('${message.payer}');">
                           <div style="display: flex; flex-direction: column; justify-content: center;">
                             <div>${displayHeader}</div>
                             <span style="font-size: 0.8em; color: gray;">${timestamp}</span>
@@ -3108,6 +3106,7 @@ loadDomains().then(domains => {
 
 
         document.getElementById("copy-coordinates").addEventListener("click", () => {
+          event.stopPropagation();
     // Get the current center of the map
     const center = map.getCenter();
     const coordinates = `${center.lng.toFixed(5)},${center.lat.toFixed(5)}`;
@@ -3438,10 +3437,8 @@ window.loadTOPIC4PIC = async function(payer) {
   try {
     // Load the accountTOPIC2PIC dictionary
     const accountTOPIC2PIC = await loadTOPIC2PIC();
-    console.log("accountTOPIC2PIC", accountTOPIC2PIC);
     // Check if the payer exists and has a topic2pic
     if (!accountTOPIC2PIC[payer] || !accountTOPIC2PIC[payer].topic2pic) {
-      console.log(`No topicId found for payer ${payer}, returning empty object`);
       return {};
     }
 
@@ -3464,7 +3461,6 @@ window.loadTOPIC4PIC = async function(payer) {
 
     // Fetch messages for the topicId
     const result = await window.HashinalsWalletConnectSDK.getMessages(topicIdStr);
-    console.log("result", result);
 
     // Check if result exists and has messages
     if (!result || !Array.isArray(result.messages)) {
@@ -3561,7 +3557,6 @@ window.loadTOPIC4PIC = async function(payer) {
 
 
     // Return the processed topic IDs with names
-    console.log("loadedTopicIdsWithNames", loadedTopicIdsWithNames);
     return { loadedTopicIdsWithNames };
 
   } catch (error) {
@@ -7336,7 +7331,7 @@ async function processTopicMessages(topicId) {
       <div style="display: flex; align-items: center;">
 <img src="${profileUrl}" alt="Profile photo" 
       style="width: 7vh; height: 7vh; margin-right: 1em; border-radius: 50%;" 
-      onclick="loadTOPIC4PIC('${message.payer}').then(result => console.log(result)).catch(err => console.error('Error:', err));">
+      onclick="loadTOPIC4PIC('${message.payer}');">
         <div>${displayHeader}</div>
       </div>
       <div style="text-align: center;"> <!-- Center the title -->
@@ -7411,7 +7406,7 @@ async function processTopicMessages(topicId) {
           <div style="display: flex; align-items: center;">
 <img src="${profileUrl}" alt="Profile photo" 
       style="width: 7vh; height: 7vh; margin-right: 1em; border-radius: 50%;" 
-      onclick="loadTOPIC4PIC('${message.payer}').then(result => console.log(result)).catch(err => console.error('Error:', err));">
+      onclick="loadTOPIC4PIC('${message.payer}');">
             <div>${displayHeader}</div>
           </div>
           <div style="text-align: center;"> <!-- Center the title and image -->
